# mediscan-ai

./: .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .releaserc.json  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  package-lock.json  pyproject.toml
.gitlab/issue_templates/: bug.md  feature.md
backend/: requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: routes.py
backend/app/core/: config.py  security.py
backend/app/db/: database.py
backend/app/models/: report.py
backend/app/repositories/: report_repository.py
backend/app/schemas/: report.py
backend/app/services/: clinical_summary.py  extractor.py  llm.py  ocr.py  report_parser.py  report_service.py  risk_engine.py  text_cleaner.py
backend/tests/integration/: test_api.py
backend/tests/unit/: test_clinical.py  test_extractor.py
docs/: ai-workflow.md  api.md  architecture.md  database.md  gitlab.md  risk-analysis.md  roadmap.md  spec.md  work-division.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  styles.css
frontend/src/components/: Dashboard.tsx  Login.tsx
frontend/src/hooks/: useTheme.ts
frontend/src/lib/: utils.ts
frontend/src/pages/: DashboardPage.tsx  HistoryPage.tsx  ReportViewerPage.tsx  SearchPage.tsx  SettingsPage.tsx  UploadPage.tsx
models/: README.md
sample_outputs/: blood_report.json
sample_reports/: blood_report.txt  ecg_report.txt  prescription.txt
scripts/: validate-docs.sh
(+16 files in other folders)
